--- a/admin/notifications.html
+++ b/admin/notifications.html
@@ -54,6 +54,34 @@
     </nav>
     <div class="container">
       <div class="content-container">
+        <div class="options-container">
+          <div class="show-options">
+            <span>Options</span>
+            <i class="fas fa-caret-right"></i>
+          </div>
+          <div class="options">
+            <div class="sort">
+              <p>Sort By</p>
+              <form method="GET">
+                <input type="hidden" name="sort" value="name" />
+                <button type="submit">
+                  <span>Name</span>
+                </button>
+              </form>
+              <form method="GET">
+                <input type="hidden" name="sort" value="date" />
+                <button type="submit">
+                  <span>Date</span>
+                </button>
+              </form>
+            </div>
+            <form method="GET">
+              <span>Show</span>
+              <input type="number" name="entries" value="5" required />
+              <span>entries</span>
+            </form>
+          </div>
+        </div>
         <div class="heading">
           <h2>Notifications</h2>
           <button>
@@ -84,7 +112,7 @@
           </div>
           <!--  -->
           <div class="day">
-            <h3>Today</h3>
+            <h3>Yesterday</h3>
             <div class="notification">
               <div class="notification-heading">
                 <h4>New Request from Soo Yong Jie</h4>
