--- a/index.html
+++ b/index.html
@@ -1,53 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<body>
+  <body>
     <a href="./admin/">
-        <span>Admin</span>
+      <span>Admin</span>
     </a>
     <a href="./student/">
-        <span>Student</span>
+      <span>Student</span>
     </a>
-</body>
-<style>
+  </body>
+  <style>
     body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: #f3f3f3;
-        color: #222;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #f3f3f3;
+      color: #222;
     }
 
     a {
-        height: 100vh;
-        width: 50vw;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: none;
-        font-family: Europa;
-        font-size: 24px;
-        outline: none;
+      height: 100vh;
+      width: 50vw;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: none;
+      font-family: Europa;
+      font-size: 24px;
+      outline: none;
+      color: #000;
     }
 
     a:hover {
-        background-color: #ccc;
-        color: #000;
+      background-color: #ccc;
+      color: #000;
     }
 
     a:focus {
-        background-color: #000;
-        color: #eee;
-        transition: 0.2s ease-out;
+      background-color: #000;
+      color: #eee;
+      transition: 0.2s ease-out;
     }
-</style>
-
+  </style>
 </html>
