--- a/student/home.html
+++ b/student/home.html
@@ -2,102 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <title>INTI Academic Services</title>
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/student/student.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?&family=Roboto:wght@300;400;500;700&family=Poppins:wght@200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../css/style.css" />
-    <script src="./js/theme.js"></script>
+    <link rel="stylesheet" href="../css/student/student.css" />
   </head>
-
   <body>
     <nav>
-      <div class="logo-container">
-        <i class="fas fa-bars hamburger"></i>
-        <img class="inti-logo" src="../img/inti-logo.png" alt="" />
+      <div class="nav-back">
+        <i class="fas fa-arrow-left"></i>
+        <span>Back</span>
       </div>
-      <div class="nav-items">
-        <ul>
-          <li class="active">
-            <a href="./home.html">Home</a>
-          </li>
-          <li class="">
-            <a href="./requests.html">Requests</a>
-          </li>
-          <li class="">
-            <a href="./help.html">Help</a>
-          </li>
-        </ul>
-        <div class="user">
-          <div>
-            <span>Soo Yong Jie</span>
-            <i class="fas fa-sort-down"></i>
-          </div>
-          <div class="user-dropdown">
-            <ul>
-              <span>Settings</span>
-              <li class="toggle-theme" onclick="toggleTheme()">Toggle Theme</li>
-              <hr />
-              <li>Account Details</li>
-              <li>Sign Out</li>
-            </ul>
-          </div>
+      <div class="logo">
+        <img src="../img/inti-logo.png" alt="" />
+      </div>
+      <div class="nav-user">
+        <span>sooyongjie</span>
+        <i class="fas fa-caret-down"></i>
+        <div class="user-dropdown">
+          <span>Hello</span>
         </div>
       </div>
     </nav>
-    <div class="loading-screen">
-      <svg class="spinner" viewBox="0 0 50 50">
-        <circle
-          class="path"
-          cx="25"
-          cy="25"
-          r="20"
-          fill="none"
-          stroke-width="5"
-        ></circle>
-      </svg>
-    </div>
-    <div class="container home">
-      <div class="welcome">
-        <h3>Welcome, Soo Yong Jie.</h3>
+    <div class="container">
+      <div class="card">
+        <i class="far fa-sticky-note"></i>
+        <span>Send Request</span>
       </div>
-      <div class="your-requests">
-        <h4>Your Requests</h4>
-        <ul>
-          <li>Request #10001 <span>Pending payment</span></li>
-          <li>Request #10002 <span>Pending payment</span></li>
-        </ul>
-        <a href="./requests.html" class="std-btn">
-          <span>View All</span>
-          <i class="fas fa-long-arrow-alt-right"></i>
-        </a>
-        <!-- <p>You have not submitted a request.</p> -->
+      <div class="card">
+        <i class="fas fa-history"></i>
+        <span>View Requests</span>
       </div>
     </div>
-    <footer>
-      <p class="copyright">© 2021 INTI International University & Colleges</p>
-    </footer>
   </body>
-
-  <script>
-    const hamburger = document.querySelector(".hamburger");
-    const navItems = document.querySelector(".nav-items");
-    hamburger.addEventListener("click", () => {
-      navItems.classList.toggle("active");
-      // setTimeout(() => {
-      //     navLink.forEach((el) => {
-      //         el.classList.toggle('show')
-      //     })
-      // }, 300);
-    });
-  </script>
 </html>
