Added new request page

--- a/student/new-request.html
+++ b/student/new-request.html
@@ -55,14 +55,22 @@
       </svg>
     </div>
     <div class="container">
-      <a href="./new-request.html" class="button card">
-        <i class="far fa-sticky-note"></i>
-        <span>Send Request</span>
-      </a>
-      <a href="./requests.html" class="button card">
-        <i class="far fa-history"></i>
-        <span>View Requests</span>
-      </a>
+      <form class="card form">
+        <div class="heading">
+          <h2>New Request</h2>
+        </div>
+        <label for="">Programme</label>
+        <input type="text" value="University of Wollongong" />
+        <label for="">Session</label>
+        <input type="text" value="July 2020" />
+        <label for="">Course Code</label>
+        <input type="text" value="CSIT321" />
+        <label for="">No. of Sets</label>
+        <input type="text" value="1" />
+        <button>
+          <span>Submit</span>
+        </button>
+      </form>
     </div>
   </body>
   <footer>
