Updated images to svg format

--- a/student/home.html
+++ b/student/home.html
@@ -22,12 +22,12 @@
   </head>
   <body>
     <nav>
-      <a class="nav-back">
-        <i class="fas fa-arrow-left"></i>
-        <span class="nav-item">Back</span>
+      <a class="nav-back" onclick="goBack()">
+        <!-- <i class="fas fa-arrow-left"></i>
+        <span class="nav-item">Back</span> -->
       </a>
       <div class="logo">
-        <img src="../img/inti-logo.png" class="inti-logo" alt="" />
+        <img src="../img/inti-logo.svg" class="inti-logo" alt="" />
       </div>
       <div class="nav-user">
         <a class="nav-item">sooyongjie</a>
