--- a/student/new-request.html
+++ b/student/new-request.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <nav>
-      <a class="nav-back">
+      <a class="nav-back" onclick="goBack()">
         <i class="fas fa-arrow-left"></i>
         <span class="nav-item">Back</span>
       </a>
