Request view page and a few minor details

--- a/student/request-view.html
+++ b/student/request-view.html
@@ -23,9 +23,9 @@
             <i class="fas fa-arrow-left"></i>
             <span class="nav-item">Back</span>
         </a>
-        <a href="./home.html" class="logo">
+        <div class="logo">
             <img src="../img/inti-logo.svg" class="inti-logo" alt="" />
-          </a>
+        </div>
         <div class="nav-user">
             <a class="nav-item">sooyongjie</a>
             <i class="fas fa-caret-down"></i>
@@ -44,7 +44,7 @@
             <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
         </svg>
     </div>
-    <div class="container row">
+    <div class="container">
         <div class="card request">
             <div class="heading">
                 <h2>Request #10001</h3>
@@ -54,27 +54,14 @@
             <label for="">No. of Sets</label>
             <p>1</p>
             <label for="">Status</label>
-            <div class="col">
-                <p>Pending</p>
-                <a href="./request-view.html" class="view-request">
-                    <i class="fas fa-arrow-right"></i>
-                </a>
-            </div>
+            <p>Pending</p>
         </div>
-        <div class="card request">
+        <div class="payment">
             <div class="heading">
-                <h2>Request #10001</h3>
+                <h2>Payment Details</h3>
             </div>
-            <label for="">Course Code</label>
-            <p>CSIT321</p>
-            <label for="">No. of Sets</label>
-            <p>1</p>
-            <label for="">Status</label>
-            <div class="col">
-                <p>Pending</p>
-                <a href="./request-view.html" class="view-request">
-                    <i class="fas fa-arrow-right"></i>
-                </a>
+            <div class="order">
+                <label for="">CSIT321 ×1 = RM1</label>
             </div>
         </div>
     </div>
