--- a/student/new-request.html
+++ b/student/new-request.html
@@ -1,82 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>INTI Academic Services</title>
-    <link
-      rel="stylesheet"
-      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?&family=Roboto:wght@300;400;500;700&family=Poppins:wght@200;300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../css/style.css" />
-    <!-- <link rel="stylesheet" href="../css/student/student.css" /> -->
-    <link rel="stylesheet" href="../css/student/student.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
-  </head>
-  <body>
-    <nav>
-      <a class="nav-back" onclick="goBack()">
-        <i class="fas fa-arrow-left"></i>
-        <span class="nav-item">Back</span>
-      </a>
-      <div class="logo">
-        <img src="../img/inti-logo.png" class="inti-logo" alt="" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>INTI Academic Services</title>
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <link
+    href="https://fonts.googleapis.com/css2?&family=Roboto:wght@300;400;500;700&family=Poppins:wght@200;300;400;500;600;700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="../css/style.css" />
+  <!-- <link rel="stylesheet" href="../css/student/student.css" /> -->
+  <link rel="stylesheet" href="../css/student/student.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+</head>
+
+<body>
+  <nav>
+    <a class="nav-back" onclick="goBack()">
+      <i class="fas fa-arrow-left"></i>
+      <span class="nav-item">Back</span>
+    </a>
+    <a href="./home.html" class="logo">
+      <img src="../img/inti-logo.svg" class="inti-logo" alt="" />
+    </a>
+    <div class="nav-user">
+      <a class="nav-item">sooyongjie</a>
+      <i class="fas fa-caret-down"></i>
+      <!-- Dropdown -->
+      <div class="user-dropdown">
+        <label>Settings</label>
+        <a id="theme-btn">Toggle Theme<i class="fad fa-sun" id="theme-icon"></i></a>
+        <hr />
+        <a href="./profile.html">Account Details</a>
+        <a href="./">Sign out</a>
       </div>
-      <div class="nav-user">
-        <a class="nav-item">sooyongjie</a>
-        <i class="fas fa-caret-down"></i>
-        <!-- Dropdown -->
-        <div class="user-dropdown">
-          <label>Settings</label>
-          <a id="theme-btn">Toggle Theme<i class="fad fa-sun"></i></a>
-          <hr />
-          <a href="./profile.html">Account Details</a>
-          <a href="./">Sign out</a>
-        </div>
+    </div>
+  </nav>
+  <div class="loading-screen">
+    <svg class="spinner" viewBox="0 0 50 50">
+      <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+    </svg>
+  </div>
+  <div class="container">
+    <form class="card request form">
+      <div class="heading">
+        <h2>New Request</h2>
       </div>
-    </nav>
-    <div class="loading-screen">
-      <svg class="spinner" viewBox="0 0 50 50">
-        <circle
-          class="path"
-          cx="25"
-          cy="25"
-          r="20"
-          fill="none"
-          stroke-width="5"
-        ></circle>
-      </svg>
-    </div>
-    <div class="container">
-      <form class="card form">
-        <div class="heading">
-          <h2>New Request</h2>
-        </div>
-        <label for="">Programme</label>
-        <input type="text" value="University of Wollongong" />
-        <label for="">Session</label>
-        <input type="text" value="July 2020" />
-        <label for="">Course Code</label>
-        <input type="text" value="CSIT321" />
-        <label for="">No. of Sets</label>
-        <input type="text" value="1" />
-        <button>
-          <span>Submit</span>
-        </button>
-      </form>
-    </div>
-  </body>
-  <footer>
-    <p class="copyright">© 2021 INTI International University & Colleges</p>
-  </footer>
-  <script src="js/script.js"></script>
-  <script src="js/home.js"></script>
-  <script src="js/theme.js"></script>
+      <label for="">Programme</label>
+      <input type="text" value="University of Wollongong" />
+      <label for="">Session</label>
+      <input type="text" value="July 2020" />
+      <label for="">Course Code</label>
+      <input type="text" value="CSIT321" />
+      <label for="">No. of Sets</label>
+      <input type="text" value="1" />
+      <button>
+        <span>Submit</span>
+      </button>
+    </form>
+  </div>
+</body>
+<footer>
+  <p class="copyright">© 2021 INTI International University & Colleges</p>
+</footer>
+<script src="js/script.js"></script>
+<script src="js/home.js"></script>
+<script src="js/theme.js"></script>
+
 </html>
