--- a/student/profile.html
+++ b/student/profile.html
@@ -35,7 +35,7 @@
         <!-- Dropdown -->
         <div class="user-dropdown">
           <label>Settings</label>
-          <a id="theme-btn">Toggle Theme<i class="fad fa-sun"></i></a>
+          <a id="theme-btn">Toggle Theme<i class="fad fa-sun" id="theme-icon"></i></a>
           <hr />
           <a href="./profile.html">Account Details</a>
           <a href="./">Sign out</a>
