--- a/student/requests.html
+++ b/student/requests.html
@@ -51,8 +51,8 @@
             </div>
             <label for="">Course Code</label>
             <p>CSIT321</p>
-            <label for="">No. of Sets</label>
-            <p>1</p>
+            <label for="">Session</label>
+            <p>July 2019</p>
             <label for="">Status</label>
             <div class="col">
                 <p>Pending</p>
@@ -67,8 +67,6 @@
             </div>
             <label for="">Course Code</label>
             <p>CSIT321</p>
-            <label for="">No. of Sets</label>
-            <p>1</p>
             <label for="">Status</label>
             <div class="col">
                 <p>Pending</p>
