Mobile view implementation

--- a/student/home.html
+++ b/student/home.html
@@ -27,7 +27,9 @@
       <img src="../img/inti-logo-half.svg" class="inti-logo" alt="" />
     </a>
     <div class="nav-user">
-      <a class="nav-item">sooyongjie</a>
+      <a class="nav-item">
+        <span>sooyongjie</span>
+      </a>
       <i class="fas fa-caret-down"></i>
       <!-- Dropdown -->
       <div class="user-dropdown">
