--- a/student/request-view.html
+++ b/student/request-view.html
@@ -59,13 +59,35 @@
             <p>July 2019</p>
             <label for="">Status</label>
             <p>Pending</p>
+            <label for="">Total Amount</label>
+            <p>RM1</p>
         </div>
         <div class="payment">
-            <div class="order">
-                <div class="heading">
-                    <h2>Order Details</h3>
+            <div class="heading">
+                <h2>Payment Method</h2>
+            </div>
+            <p>Bank Transfer only</p>
+            <div class="card">
+                <div class="payment-info">
+                    <img src="../img/mb.png" alt="">
+                    <div>
+                        <p>Soo Yong Jie</p>
+                        <p>10988333</p>
+                    </div>
+                    <a href="https://www.maybank2u.com.my/">
+                        <i class="fas fa-external-link-square-alt"></i>
+                    </a>
                 </div>
-                    <p>Total RM1</p>
+                <div class="payment-info">
+                    <img src="../img/pb.png" alt="">
+                    <div>
+                        <p>Soo Yong Jie</p>
+                        <p>10988333</p>
+                    </div>
+                    <a href="https://www2.pbebank.com/myIBK/apppbb/servlet/">
+                        <i class="fas fa-external-link-square-alt"></i>
+                    </a>
+                </div>
             </div>
             <div class="heading">
                 <h2>Payment Details</h3>
@@ -75,32 +97,7 @@
                 <span>Upload Receipt</span>
                 <input type="file" name="" id="receipt-input">
             </label>
-            <div class="heading">
-                <h2>Payment Method</h2>
-            </div>
-            <p>Bank Transfer only</p>
-            <div class="card">
-                <div class="payment-info">
-                    <img src="../img/mb.png" alt="">
-                    <div>
-                        <h4>Soo Yong Jie</h4>
-                        <h4>10988333</h4>
-                    </div>
-                    <a href="https://www.maybank2u.com.my/">
-                        <i class="fas fa-external-link-square-alt"></i>
-                    </a>
-                </div>
-                <div class="payment-info">
-                    <img src="../img/pb.png" alt="">
-                    <div>
-                        <h4>Soo Yong Jie</h4>
-                        <h4>10988333</h4>
-                    </div>
-                    <a href="https://www2.pbebank.com/myIBK/apppbb/servlet/">
-                        <i class="fas fa-external-link-square-alt"></i>
-                    </a>
-                </div>
-            </div>
+
         </div>
     </div>
     <div class="toast-container">
