--- a/student/index.html
+++ b/student/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Primary Meta Tags -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>INTI Academic Services</title>
+    <meta name="title" content="INTI Academic Services — Purchase Course Structure">
+    <meta name="description" content="⚒ Site Under Construction ⚒">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://intiacademicsupportservices.000webhostapp.com/">
+    <meta property="og:title" content="INTI Academic Services — Purchase Course Structure">
+    <meta property="og:description" content="⚒ Site Under Construction ⚒">
+    <meta property="og:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://intiacademicsupportservices.000webhostapp.com/">
+    <meta property="twitter:title" content="INTI Academic Services — Purchase Course Structure">
+    <meta property="twitter:description" content="⚒ Site Under Construction ⚒">
+    <meta property="twitter:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -14,13 +35,13 @@
     <script src="./js/theme.js"></script>
 </head>
 
-<body class="what">
+<body>
     <div class="container">
-        <img class="inti-logo" src="../img/inti-logo-full.png" alt="">
+        <img class="inti-logo" src="../img/inti-logo-full.svg" alt="INTI Logo" height="44.92" width="350px">
         <div class="title-container">
             <h3 class="title">Course Structure Application</h3>
         </div>
-        <form class="login-form" action="./home.html">
+        <form class="login-form" action="./home.php">
             <label for="">INTI ID</label>
             <input type="text" name="" id="" placeholder="j17025666">
             <label for="">Password</label>
