--- a/index.html
+++ b/index.html
@@ -1,52 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
 
-  <body>
-    <a href="./admin/">
-      <span>Admin</span>
-    </a>
-    <a href="./student/">
-      <span>Student</span>
-    </a>
-  </body>
-  <style>
-    body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #f3f3f3;
-      color: #222;
-    }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Directory</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"
+    integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ=="
+    crossorigin="anonymous"></script>
+</head>
+<style>
+  body {
+    height: 25vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #222;
+    font-family: "Poppins", sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+  }
 
-    a {
-      height: 100vh;
-      width: 50vw;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border: none;
-      font-family: Europa;
-      font-size: 24px;
-      outline: none;
-      color: #000;
-    }
+  a {
+    padding: 4px 0 4px 0;
+    border-bottom: 1px solid #666;
+    text-decoration: none;
+    transition: 0.2s;
+    opacity: 0;
+  }
 
-    a:hover {
-      background-color: #ccc;
-      color: #000;
-    }
+  a:hover {
+    padding: 4px 6px 4px 6px;
+  }
 
-    a:focus {
-      background-color: #000;
-      color: #eee;
-      transition: 0.2s ease-out;
-    }
-  </style>
+  a:visited {
+    color: #222;
+  }
+
+  a:not(visited) {
+    color: #222;
+  }
+</style>
+
+<body>
+  <a href="./admin/">Admin</a>
+  <br>
+  <a href="./student/">Student</a>
+</body>
+<script>
+  var gsap = gsap.timeline();
+  gsap.to("a", {
+    opacity: 1,
+    duration: 0.3,
+    delay: 0.1,
+    stagger: 0.1
+  }); //wait 2 seconds
+</script>
+
 </html>
